kubernetes/01-namespace.yaml
apiVersion: v1
kind: Namespace

metadata:
  name: cloudnative-commerce

  labels:
    name: cloudnative-commerce
    environment: production
