kubernetes/06-mongodb-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: mongodb-service
  namespace: cloudnative-commerce

spec:
  ports:
    - port: 27017
      targetPort: 27017

  selector:
    app: mongodb
