kubernetes/09-easyshop-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: cloudnative-commerce-service
  namespace: cloudnative-commerce

spec:
  type: ClusterIP

  ports:
    - port: 80
      targetPort: 3000

  selector:
    app: cloudnative-commerce
