kubernetes/13-argocd-lb.yaml
apiVersion: v1
kind: Service

metadata:
  name: argocd-server-lb
  namespace: argocd

spec:
  type: LoadBalancer

  selector:
    app.kubernetes.io/name: argocd-server

  ports:
    - name: https
      port: 443
      targetPort: 8080
