kubernetes/14-argocd-nodeport.yaml
apiVersion: v1
kind: Service

metadata:
  name: argocd-server-nodeport
  namespace: argocd

spec:
  type: NodePort

  selector:
    app.kubernetes.io/name: argocd-server

  ports:
    - name: https
      port: 443
      targetPort: 8080
      nodePort: 32080
