kubernetes/10-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: cloudnative-commerce-ingress
  namespace: cloudnative-commerce

  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"

spec:
  rules:
    - host: 13.201.16.5.nip.io

      http:
        paths:
          - path: /

            pathType: Prefix

            backend:
              service:
                name: cloudnative-commerce-service

                port:
                  number: 80
